Integracion de config alertmanager en Telegram, Slack y Correo

--- a/nexporter-cadvisor/alertmanager/config.yml
+++ b/nexporter-cadvisor/alertmanager/config.yml
@@ -1,10 +1,53 @@
+global:
+  resolve_timeout: 1m
+  slack_api_url: ''
+
 route:
-  receiver: 'slack'
+  receiver: 'slack-notifications'
+
+  routes:
+   - matchers:
+       - severity =~ "page|warning|critical|info"
+     continue: true
+     receiver: 'slack-notifications'
+
+   - matchers:
+       - severity =~ "page|warning|critical|info"
+     continue: true
+     receiver: 'send-telegram'
+
+   - matchers:
+       - severity =~ "page|warning|critical|info"
+     continue: true
+     receiver: 'email-notifications'
 
 receivers:
-  - name: 'slack'
-#       slack_configs:
-#           - send_resolved: true
-#             username: '<username>'
-#             channel: '#<channel-name>'
-#             api_url: '<incomming-webhook-url>'
+- name: 'slack-notifications'
+  slack_configs:
+  - channel: 'Slackbot'
+    send_resolved: true
+    title: '{{ template "slack.title" . }}'
+    text: '{{ template "slack.text" . }}'
+
+- name: 'send-telegram'
+  telegram_configs:
+  - bot_token: 
+    api_url: https://api.telegram.org
+    send_resolved: true
+    chat_id: 
+    parse_mode: 'HTML'
+    message: '{{ template "telegram_message" . }}'
+
+- name: 'email-notifications'
+  email_configs:
+    - smarthost: 'smtp.gmail.com:587'
+      auth_username: 'email@gmail.com'
+      auth_password: ''
+      from: 'email@gmail.com'
+      to: 'test@gmail.com'
+      send_resolved: true
+      headers:
+        subject: 'Prometheus Alert'
+
+templates:
+  - '/etc/alertmanager/*.tmpl'
